--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="gray_AF">#AFAFAF</color>
 
     <color name="green_C4">#C4E3B9</color>
+    <color name="blue_B9">#B9E0E3</color>
 </resources>
